Fix figures, change reference, format paragraph

--- a/apa6/cmb.bib
+++ b/apa6/cmb.bib
@@ -222,13 +222,6 @@ year = {1993}
  note = "[Retrieved February 01, 2013.]",
  year = {2013}
 } 
-@misc{Pujol2012,
- author = {Pujol, Josep M.},
- title = {{Having fun with Redis Replication between Amazon and Rackspace}},
- howpublished = {\url{http://3scale.github.com/2012/07/25/fun-with-redis-replication/}},
- note = "[Retrieved February 01 2013.]",
- year = {2012}
-}
 @inproceedings{Sovran2011,
  author = {Sovran, Yair and Power, Russell and Aguilera, Marcos K. and Li,
 Jinyang},
@@ -245,6 +238,13 @@ Jinyang},
  keywords = {asynchronous replication, distributed storage, geo-distributed
 systems, key-value store, parallel snapshot isolation, transactions},
 } 
+@misc{Topchiy2013,
+ author = {Topchiy, Serhiy},
+ title = {{Testing Amazon EC2 network speed}},
+ howpublished = {\url{http://epamcloud.blogspot.com.br/2013/03/testing-amazon-ec2-network-speed.html}},
+ note = "[Retrieved May 01, 2013.]",
+ year = {2013}
+}
 @inproceedings{vanRenesse2004,
  author = {van Renesse, Robbert and Schneider, Fred B.},
  title = {Chain replication for supporting high throughput and availability},
